--- a/Interactive-Web/clone/index.html
+++ b/Interactive-Web/clone/index.html
@@ -34,17 +34,19 @@
       </nav>
       <section class="scroll-section" id="scroll-section-0">
         <h1>Clone Pro</h1>
-        <!-- stickey : 스티커처럼 딱 붙어있다가 자연스럽게 사라지는 효과 -->
-        <div class="stickey-elem main-message">
+        <!-- stickey : 스티커처럼 딱 붙어있다가 -> position : fiexed!!
+          sticky -> 어떠한 조건을 충족하면 fiexed와 같아짐!! ex) position: sticky; top: 2rem; -> top이 2rem이 되면 고정!
+          자연스럽게 사라지는 효과 -->
+        <div class="sticky-elem main-message">
           <p>온전히 빠져들게 하는<br />최고급 세라믹</p>
         </div>
-        <div class="stickey-elem main-message">
+        <div class="sticky-elem main-message">
           <p>주변 맛을 느끼게 해주는<br />주변 맛 허용 모드</p>
         </div>
-        <div class="stickey-elem main-message">
+        <div class="sticky-elem main-message">
           <p>온종일 편안한<br />맞춤형 손잡이</p>
         </div>
-        <div class="stickey-elem main-message">
+        <div class="sticky-elem main-message">
           <p>새롭게 입가를<br />찾아온 매혹</p>
         </div>
       </section>
@@ -77,13 +79,13 @@
         </p>
       </section>
       <section class="scroll-section" id="scroll-section-2">
-        <div class="stickey-elem main-message">
+        <div class="sticky-elem main-message">
           <p>
             <small>편한한 촉감</small>
             입과 하나 되다
           </p>
         </div>
-        <div class="stickey-elem desc-message">
+        <div class="sticky-elem desc-message">
           <p>
             편안한 목넘김을 완성하는 디테일한 여러 구성 요소들, 우리는 이를
             하나하나 새롭게 살피고 재구성하는 과정을 거쳐 새로운 수준의 머그,
@@ -92,7 +94,7 @@
           </p>
           <div class="pin"></div>
         </div>
-        <div class="stickey-elem desc-message">
+        <div class="sticky-elem desc-message">
           <p>디자인 앤 퀄리티 오브 스웨덴,<br />메이드 인 차이나</p>
           <div class="pin"></div>
         </div>
@@ -121,4 +123,5 @@
       <footer class="footer">2021, YoungJae YANG</footer>
     </div>
   </body>
+  <script src="js/main.js"></script>
 </html>
