--- a/Interactive-Web/clone/index.html
+++ b/Interactive-Web/clone/index.html
@@ -37,16 +37,16 @@
         <!-- stickey : 스티커처럼 딱 붙어있다가 -> position : fiexed!!
           sticky -> 어떠한 조건을 충족하면 fiexed와 같아짐!! ex) position: sticky; top: 2rem; -> top이 2rem이 되면 고정!
           자연스럽게 사라지는 효과 -->
-        <div class="sticky-elem main-message">
+        <div class="sticky-elem main-message a">
           <p>온전히 빠져들게 하는<br />최고급 세라믹</p>
         </div>
-        <div class="sticky-elem main-message">
+        <div class="sticky-elem main-message b">
           <p>주변 맛을 느끼게 해주는<br />주변 맛 허용 모드</p>
         </div>
-        <div class="sticky-elem main-message">
+        <div class="sticky-elem main-message c">
           <p>온종일 편안한<br />맞춤형 손잡이</p>
         </div>
-        <div class="sticky-elem main-message">
+        <div class="sticky-elem main-message d">
           <p>새롭게 입가를<br />찾아온 매혹</p>
         </div>
       </section>
