input 디자인 수정

--- a/Todo-list/index.html
+++ b/Todo-list/index.html
@@ -13,7 +13,14 @@
       <h1>00:00</h1>
     </div>
     <form class="js-form form">
-      <input type="text" placeholder="What is your name?" />
+      <input type="text" placeholder="What is your name?" 
+      style="
+        color: white;
+        text-align: center;
+        font-size: 1rem;
+        font-weight: bold;
+      " 
+    />
     </form>
     <form class="js-toDoForm">
       <input
