--- a/Interactive-Web/clone/index.html
+++ b/Interactive-Web/clone/index.html
@@ -34,7 +34,10 @@
       </nav>
       <section class="scroll-section" id="scroll-section-0">
         <h1>Clone Pro</h1>
-        <!-- stickey : 스티커처럼 딱 붙어있다가 -> position : fiexed!!
+        <div class="sticky-elem sticky-elem-canvas">
+          <canvas id="video-canvas-0" width="1920" height="1980"></canvas>
+        </div>
+        <!-- sticky : 스티커처럼 딱 붙어있다가 -> position : fiexed!!
           sticky -> 어떠한 조건을 충족하면 fiexed와 같아짐!! ex) position: sticky; top: 2rem; -> top이 2rem이 되면 고정!
           자연스럽게 사라지는 효과 -->
         <div class="sticky-elem main-message a">
